[metadata]
name = ble_mqtt_gateway
version = 0.0.1
author = Julius Piso
author_email = julius@piso.at
description = Gateway service that connects BLE devices with data publishers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yozoon/wunderbar-ble-to-mqtt/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    ble_mqtt_gateway = ble_mqtt_gateway.ble_mqtt_gateway:main